Fixes bug where About us split on two lines on small devices

--- a/style/base.scss
+++ b/style/base.scss
@@ -2279,6 +2279,10 @@ fieldset {
   // .extra-options-checkbox {
   //   font-size: 13px;
   // }
+
+  .header-nav-list a {
+    margin-left: 16px;
+  }
 }
 
 /* When the browser is at least 600px and above */
